chore: apply sprint4 base project