@@ -2,125 +2,107 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.nio.file.Paths;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileChannelRepository implements ChannelRepository {
+    private final Path DIRECTORY;
+    private final String EXTENSION = ".ser";
 
-    private static final String FILE_PATH = "data/channels.txt";
-
-    public FileChannelRepository(String fileDirectory) {
-        try {
-            Path path = Path.of(FILE_PATH);
-            if (!Files.exists(path)) {
-                Files.createDirectories(path.getParent());
-                Files.createFile(path);
+    public FileChannelRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, Channel.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
-        } catch (IOException e) {
-            throw new RuntimeException("채널 파일 생성 실패", e);
         }
     }
 
-    private List<Channel> loadAll() {
-        List<Channel> channels = new ArrayList<>();
-
-        try (BufferedReader reader = new BufferedReader(new FileReader(FILE_PATH))) {
-            String line;
-
-            while ((line = reader.readLine()) != null) {
-                if (line.isBlank()) continue;
-
-                String[] parts = line.split("\\|");
-
-                Channel channel = new Channel(
-                        parts[3],                 // channelName
-                        parts[4],                 // description
-                        Boolean.parseBoolean(parts[5]) // isPrivate
-                );
-
-                channels.add(channel);
-            }
-        } catch (IOException e) {
-            throw new RuntimeException("채널 파일 읽기 실패", e);
-        }
-
-        return channels;
-    }
-
-    private void saveAll(List<Channel> channels) {
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(FILE_PATH))) {
-            for (Channel channel : channels) {
-                writer.write(toLine(channel));
-                writer.newLine();
-            }
-        } catch (IOException e) {
-            throw new RuntimeException("채널 파일 저장 실패", e);
-        }
-    }
-
-    private String toLine(Channel channel) {
-        return String.join("|",
-                channel.getId().toString(),
-                String.valueOf(channel.getCreatedAt()),
-                String.valueOf(channel.getUpdatedAt()),
-                channel.getChannelName(),
-                channel.getChannelDescription(),
-                String.valueOf(channel.isPrivate())
-        );
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
     @Override
-    public void create(Channel channel) {
-        List<Channel> channels = loadAll();
-        channels.add(channel);
-        saveAll(channels);
+    public Channel save(Channel channel) {
+        Path path = resolvePath(channel.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(channel);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        return channel;
     }
 
     @Override
-    public Channel findById(UUID id) {
-        for (Channel channel : loadAll()) {
-            if (channel.getId().equals(id)) return channel;
+    public Optional<Channel> findById(UUID id) {
+        Channel channelNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                channelNullable = (Channel) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
         }
-        return null;
-    }
-
-    @Override
-    public Channel findByName(String channelName) {
-        for (Channel channel : loadAll()) {
-            if (channel.getChannelName().equals(channelName)) return channel;
-        }
-        return null;
+        return Optional.ofNullable(channelNullable);
     }
 
     @Override
     public List<Channel> findAll() {
-        return loadAll();
-    }
-
-    @Override
-    public boolean update(UUID id, String channelName, String channelDescription, boolean isPrivate) {
-        List<Channel> channels = loadAll();
-
-        for (Channel channel : channels) {
-            if (channel.getId().equals(id)) {
-                channel.update(channelName, channelDescription, isPrivate);
-                saveAll(channels);
-                return true;
-            }
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Channel) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-        return false;
     }
 
     @Override
-    public boolean delete(UUID id) {
-        List<Channel> channels = loadAll();
-        boolean removed = channels.removeIf(c -> c.getId().equals(id));
-        if (removed) saveAll(channels);
-        return removed;
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
